apollo-router/src/plugins/telemetry/config_new/router/snapshots/apollo_router__plugins__telemetry__config_new__router__events__tests__router_events_graphql_error@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/router/events.rs
expression: yaml
---
- fields:
    kind: router.response
  level: INFO
  message: ""
  span:
    apollo_private.duration_ns: "[duration]"
    apollo_private.request: true
    http.request.method: GET
    http.route: /
    name: router
    otel.kind: SERVER
  spans:
    - apollo_private.duration_ns: "[duration]"
      apollo_private.request: true
      http.request.method: GET
      http.route: /
      name: router
      otel.kind: SERVER
